changes for home component

--- a/src/app/components/home/home.component.html
+++ b/src/app/components/home/home.component.html
@@ -12,9 +12,9 @@
               <li><a href="javascript:void(0)" [routerLink]="['/recycle-bin']">Recycle Bin</a></li>
               <li role="separator" class="divider"></li>
               <li>
-                <!-- <a href="javascript:void(0)" (click)="displayTypeChange()">
+                <a href="javascript:void(0)" (click)="displayTypeChange()">
                   {{displayList ? 'Grid View' : 'List View'}}
-                </a> -->
+                </a>
               </li>
               <li><a href="javascript:void(0)">Settings</a></li>
               <li><a href="javascript:void(0)" [routerLink]="['/about']">About</a></li>
